Fix for text overflow

--- a/src/app/shared/components/live-chat/live-chat.component.scss
+++ b/src/app/shared/components/live-chat/live-chat.component.scss
@@ -82,6 +82,7 @@
                     flex-shrink: 1;
                     padding-top: 2px;
                     vertical-align: middle;
+                    word-break: break-word;
 
                     > .name
                     {
